VK: fixes in UI and JS

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
   <header>
-    <nav>
+    <nav role="navigation">
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
   <main id="maincontent">
-    <section id="map-container" role="google-map">
-      <div id="map"></div>
+    <section id="map-container">
+      <div id="map" role="application" tabindex="-1"></div>
     </section>
     <section>
       <div class="filter-options">
